# grepify

./: .env.lib_debug  .gitignore  .lycheeignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  context7.json  pyproject.toml
.agents/skills/: grepify
.claude/skills/: grepify-diagrams
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: 🐛-bug-report.md  💡-feature-request.md
.github/scripts/: update_version.py
.github/workflows/: release.yml
benchmarks/bindings/: .gitignore  README.md  runner.py
benchmarks/bindings/python/: bench.py  pyproject.toml
benchmarks/bindings/rust/: Cargo.toml
benchmarks/bindings/rust/src/: main.rs
benchmarks/bindings/ts/: bench.ts  package-lock.json  package.json
benchmarks/entity_resolution/: .env.example  README.md  benchmark.py  pyproject.toml
benchmarks/file_summarization/: .gitignore  README.md
benchmarks/file_summarization/python/: benchmark.py  pyproject.toml  runner.py
benchmarks/file_summarization/rust/: Cargo.toml
dev/: README.md  check_node_no_pyo3.sh  check_sdk_no_pyo3.sh  generate_cli_docs.py  neo4j.yaml  postgres.yaml  run_cargo_test.sh  run_cargo_test_rust_externs.sh  run_maturin_develop.sh  update_rust_extern_locks.sh
dev/agent-skills/grepify-diagrams/: SKILL.md
dev/agent-skills/target-connector/: SKILL.md  attachments.md  input_safety.md
dev/agent-skills/upgrade-examples/: SKILL.md
docs/: astro.config.mjs  package-lock.json  package.json
docs/scripts/: remark-admonitions.mjs  remark-code-titles.mjs
docs/src/: consts.ts  middleware.ts
docs/src/components/: DocCardGrid.astro  Foot.astro  Sidebar.astro  Tabs.astro  Toc.astro  Topbar.astro
docs/src/data/: docs-sidebar.ts  redirects.ts  review-meta.ts  section-grids.ts
docs/src/layouts/: DocsLayout.astro
docs/src/lib/: raw-markdown.ts  skill-files.ts
docs/src/pages/: 404.astro  index.astro  llms-full.txt.ts  llms.txt.ts  skill.md.ts
docs/src/styles/: globals.css
examples/: AGENTS.md
examples/code_embedding/: .env.example  README.md  main.py  pyproject.toml
examples/files_transform/: .env  README.md  main.py  pyproject.toml
examples/rust/code_embedding/: Cargo.toml  README.md
examples/rust/files_transform/: Cargo.toml
examples/rust/text_embedding/: Cargo.toml  README.md
examples/text_embedding/: .env  .env.example  README.md  main.py  pyproject.toml
python/grepify/: __init__.py  cli.py  user_app_loader.py
python/grepify/_internal/: api.py  app.py  component_ctx.py  core.pyi  datatype.py  environment.py  function.py  live_component.py  memo_fingerprint.py  pending_marker.py  runner.py  serde.py  setting.py  typing.py
python/grepify/connectorkits/: __init__.py  fingerprint.py  statediff.py
python/grepify/ops/: code.py  litellm.py  sentence_transformers.py  text.py
python/grepify/resources/: embedder.py  file.py  id.py  live_map.py  rate_limit.py  schema.py  view.py
python/tests/: conftest.py
python/tests/cli/: README.md  app1.py  app_default_db.py  app_not_bound.py  flat_target_app.py  full_reprocess_app.py  memo_app.py  multi_app.py  multi_env.py  same_name_diff_env.py  single_app.py  test_cli.py  tree_test_app.py
python/tests/common/: environment.py  target_states.py
python/tests/connectors/: test_amazon_s3.py  test_azure_blob.py  test_bigquery_target.py  test_doris_target.py  test_falkordb_target.py  test_file_path.py  test_google_drive_source.py  test_iggy_source.py  test_kafka_source.py  test_kafka_target.py  test_lancedb_target.py  test_localfs_live.py  test_localfs_source.py  test_localfs_target.py  test_neo4j_target.py  test_oci_object_storage.py  (+10 more)
rust/code_ast/: Cargo.toml
rust/code_match/: Cargo.toml  README.md
rust/code_match/examples/: stress.rs
rust/code_match/src/: config.rs  lexer.rs  lib.rs  matcher.rs  prefilter.rs
rust/code_match/src/lang/: mod.rs
rust/code_match/tests/: features.rs  prefilter.rs
rust/code_match/tests/common/: mod.rs
rust/core/: Cargo.toml
rust/node/: Cargo.toml
rust/node/src/: app.rs  chunk.rs  code.rs  ctx.rs  error.rs  fingerprint.rs  fs.rs  inspect.rs  js_target.rs  lib.rs  live.rs  ratelimit.rs  runtime.rs  target.rs  text.rs
rust/ops_text/: Cargo.toml
rust/py/: Cargo.toml
rust/py/src/: app.rs  batching.rs  code.rs  component.rs  context.rs  environment.rs  fingerprint.rs  function.rs  inspect.rs  live_component.rs  logic_registry.rs  ops.rs  prelude.rs  profile.rs  ratelimit.rs  runtime.rs  rwlock.rs  stable_path.rs  target_state.rs  value.rs
rust/py_utils/: Cargo.toml
rust/py_utils/src/: error.rs
rust/sdk/grepify/: Cargo.toml
rust/sdk/grepify/benches/: sdk_microbench.rs
rust/sdk/grepify/src/: amazon_s3.rs  app.rs  azure_blob.rs  batched.rs  bigquery.rs  ctx.rs  cypher_graph.rs  doris.rs  error.rs  falkordb.rs  file.rs  fs.rs  id.rs  iggy.rs  kafka.rs  lancedb.rs  lib.rs  live_component.rs  logic.rs  memo.rs  mount.rs  neo4j.rs  oci_object_storage.rs  postgres.rs  prelude.rs  profile.rs  qdrant.rs  row_schema.rs  snowflake.rs  sqlite.rs  statediff.rs  stats.rs  surrealdb.rs  target_state.rs  turbopuffer.rs  user_state.rs  valkey.rs  zvec.rs
rust/sdk/grepify/src/ops/: api.rs  code.rs  mod.rs  sentence_transformers.rs  text.rs
rust/sdk/grepify/src/resources/: chunk.rs  embedder.rs  live_map.rs  mod.rs  rate_limit.rs  schema.rs
rust/sdk/grepify/tests/: amazon_s3_source.rs  azure_blob_source.rs  bigquery_target.rs  code.rs  detailed_stats.rs  doris_target.rs  entity_resolution.rs  fs_live.rs  gdrive_source.rs  graph_vector_index.rs  iggy_source.rs  iggy_target.rs  kafka_source.rs  kafka_target.rs  lancedb_target.rs  live_component.rs  live_map.rs  logic_tracking.rs  oci_live.rs  ops_api.rs  ops_sentence_transformers.rs  ops_text.rs  pipeline.rs  postgres_source.rs  postgres_target.rs  preview.rs  qdrant_target.rs  schema_from_row.rs  snowflake_target.rs  sqlite_target.rs  surrealdb_target.rs  target_state.rs  turbopuffer_target.rs  user_state.rs  valkey_target.rs  zvec_target.rs
rust/utils/: Cargo.toml
skills/grepify/: SKILL.md
tests/parity/: .gitignore  Makefile  README.md  run_parity.py
(+215 files in other folders)
