[package]
name = "grepify_node"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Node.js native bindings for Grepify"

[lib]
crate-type = ["cdylib"]

[features]
default = ["text", "code_match"]
text = ["grepify/text"]
code_match = ["grepify/code_match"]

[dependencies]
grepify = { path = "../sdk/grepify", default-features = false, features = ["text", "code_match"] }
grepify_core = { path = "../core" }
grepify_utils = { path = "../utils" }
napi = { version = "3", default-features = false, features = ["napi8", "async", "tokio_rt", "serde-json"] }
napi-derive = "3"
serde = { workspace = true }
rmp-serde = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
napi-build = "2"
