[package]
name = "grepify_py"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib"]

[features]
default = ["abi3"]
abi3 = ["pyo3/abi3-py311"]

[dependencies]
grepify_core = { path = "../core" }
grepify_utils = { path = "../utils" }
grepify_py_utils = { path = "../py_utils" }
grepify_code_ast = { path = "../code_ast" }
grepify_ops_text = { path = "../ops_text" }
grepify_code_match = { path = "../code_match" }

pyo3 = { workspace = true, features = ["uuid", "bytes"] }
pyo3-async-runtimes = { workspace = true, features = ["tokio-runtime"] }
uuid = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
