[package]
name = "bindings_bench"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
grepify = { path = "../../../rust/sdk/grepify", features = ["code_match", "text"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
