[package]
name = "grepify"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
# Live LocalFS directory watching (`fs::DirWalker::live`), via the `notify`
# filesystem-watcher crate.
fs_live = ["dep:notify"]
# Text splitting / language detection facade (`ops::text`).
text = ["dep:grepify_ops_text", "dep:grepify_code_ast"]
# Structural code matching over tree-sitter ASTs (`ops::code`).
# Activates grepify_code_match + grepify_code_ast (registry, CodeSource,
# LineIndex) + grepify_ops_text (parse-reusing split helpers).
code_match = [
    "dep:grepify_code_match",
    "dep:grepify_code_ast",
    "dep:grepify_ops_text",
]
# Local sentence-transformer embeddings via fastembed (`ops::sentence_transformers`).
fastembed = ["dep:fastembed"]
# Remote embeddings / transcription over an OpenAI-compatible HTTP API (`ops::api`).
embed_api = ["dep:serde_json", "dep:reqwest", "reqwest/multipart"]
postgres = ["dep:serde_json", "dep:sqlx", "dep:chrono"]
sqlite = ["dep:serde_json", "dep:sqlx", "sqlx/sqlite"]
# Apache Doris target: MySQL protocol (DDL/DELETE) via sqlx + Stream Load (row
# ingestion) over HTTP via reqwest.
doris = ["dep:serde_json", "dep:sqlx", "sqlx/mysql", "dep:reqwest"]
surrealdb = ["dep:serde_json", "dep:surrealdb"]
kafka = ["dep:rskafka", "dep:chrono"]
iggy = ["dep:iggy"]
amazon_s3 = ["dep:aws-config", "dep:aws-sdk-s3"]
google_drive = [
    "dep:serde_json",
    "dep:reqwest",
    "dep:rsa",
    "dep:sha2",
    "dep:base64",
    "dep:chrono",
]
# OCI Object Storage source: REST API + RSA-SHA256 HTTP Signature request
# signing (no official Oracle Rust SDK). Reuses the google_drive crypto/HTTP
# crates; `chrono/clock` provides the request `date` header + timestamp parsing.
oci_object_storage = [
    "dep:serde_json",
    "dep:reqwest",
    "dep:rsa",
    "dep:sha2",
    "dep:base64",
    "dep:chrono",
    "chrono/clock",
]
lancedb = ["dep:serde_json", "dep:lancedb", "dep:arrow-array", "dep:arrow-schema"]
qdrant = ["dep:serde_json", "dep:qdrant-client"]
turbopuffer = ["dep:serde_json", "dep:reqwest"]
neo4j = ["dep:serde_json", "dep:neo4rs"]
falkordb = ["dep:serde_json", "dep:redis"]
# Valkey/Redis (RediSearch) vector-search target. Reuses the `redis` crate.
valkey = ["dep:redis", "dep:serde_json"]
# Azure Blob Storage source (Microsoft's GA `azure_storage_blob` client, Entra
# ID auth via `azure_identity`; pure-HTTP over reqwest).
azure_blob = [
    "dep:azure_core",
    "dep:azure_identity",
    "dep:azure_storage_blob",
]
# Google BigQuery table target (REST API via `gcp-bigquery-client`; parameterized
# MERGE/DELETE). `chrono` parses row-timestamp columns.
bigquery = [
    "dep:serde_json",
    "dep:gcp-bigquery-client",
    "dep:yup-oauth2",
    "dep:chrono",
]
# Snowflake table target. `snowflake-api` (undocumented driver API) has no bind
# parameters, so DML is built with inline-escaped SQL literals like the Doris
# DELETE path.
snowflake = ["dep:serde_json", "dep:snowflake-api"]
# zvec embedded vector-collection target (native in-process vector DB via the
# `zvec` crate; `bundled` fetches the prebuilt lib at build time).
zvec = ["dep:serde_json", "dep:zvec"]

[dependencies]
grepify_macros = { path = "../grepify_macros" }
grepify_core = { path = "../../core", package = "grepify_core" }
grepify_utils = { path = "../../utils", package = "grepify_utils" }
# Language registry + shared `CodeSource` handle (`ops::text`, `ops::code`).
grepify_code_ast = { path = "../../code_ast", optional = true }
# Text splitting / language detection (`ops::text`); also used by `code_match`.
grepify_ops_text = { path = "../../ops_text", optional = true }
# Structural code matching (`ops::code`).
grepify_code_match = { path = "../../code_match", optional = true }
# Local sentence-transformer embeddings (`ops::sentence_transformers`); pulls in
# the ONNX runtime, so it is gated behind the `fastembed` feature.
fastembed = { version = "4", optional = true }
thiserror = "2"
bytes = "1"
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
tokio = { version = "1", features = ["fs", "sync"] }
futures = "0.3"
tracing = "0.1"
globset = "0.4"
walkdir = "2"
encoding_rs = "0.8"
async-trait = "0.1"
# Filesystem watcher for live LocalFS sources (feature `fs_live`).
notify = { version = "8", optional = true }
rustc-hash = "2.1.1"
# Link-time registry of `#[coco::function]` logic fingerprints, registered into
# the engine's logic set at startup so transitive logic-change detection works.
linkme = "0.3"
uuid = { workspace = true }
serde_json = { version = "1", optional = true }
sqlx = { version = "0.8", default-features = false, optional = true, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
] }
chrono = { version = "0.4", default-features = false, optional = true }
rskafka = { version = "0.6", default-features = false, optional = true }
# Apache Iggy message-streaming target (pure-Rust client; TCP/QUIC/HTTP).
iggy = { version = "0.10", optional = true }
# Amazon S3 (and S3-compatible, e.g. MinIO) object source.
aws-config = { version = "1", optional = true }
aws-sdk-s3 = { version = "1", optional = true }
# Google Drive source: HTTP (native-tls = macOS Security.framework, no cmake)
# + pure-Rust RS256 JWT signing for service-account auth.
reqwest = { version = "0.12", features = ["json"], optional = true }
rsa = { version = "0.9", features = ["sha2", "pem"], optional = true }
sha2 = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }
# Native LanceDB target (LanceDB core is Rust). Arrow versions track lancedb's.
lancedb = { version = "0.26", default-features = false, optional = true }
arrow-array = { version = "57", optional = true }
arrow-schema = { version = "57", optional = true }
# Qdrant vector-store target (gRPC client; build needs `protoc`).
qdrant-client = { version = "1.18", optional = true }
surrealdb = { version = "3", default-features = false, optional = true, features = [
    "protocol-ws",
    "rustls",
] }
neo4rs = { version = "0.8.0", optional = true }
redis = { version = "0.32.7", default-features = false, optional = true, features = [
    "aio",
    "tokio-comp",
] }
# Azure Blob Storage source (feature `azure_blob`). Microsoft's GA SDK: the blob
# client, Entra ID credentials, and the shared core (Url, Pager, credentials).
azure_core = { version = "1", optional = true }
azure_identity = { version = "1", optional = true }
azure_storage_blob = { version = "1", optional = true }
# Google BigQuery table target (feature `bigquery`). Uses the native-tls backend
# (macOS Security.framework / system OpenSSL), matching the other HTTP
# connectors; the `rust-tls` path needs an explicit rustls crypto provider.
gcp-bigquery-client = { version = "0.28", default-features = false, optional = true, features = [
    "native-tls",
] }
# `gcp-bigquery-client` pulls `yup-oauth2` with `hyper-rustls` but no rustls
# crypto provider, which fails to build. Depend on it directly so Cargo feature
# unification enables `ring` on the shared instance.
yup-oauth2 = { version = "12", default-features = false, optional = true, features = [
    "ring",
] }
# Snowflake table target (feature `snowflake`).
snowflake-api = { version = "0.14", optional = true }
# zvec embedded vector database target (feature `zvec`). `bundled` downloads the
# prebuilt native library at build time so no external zvec install is required.
zvec = { version = "0.1", optional = true, features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
criterion = "0.5"
glob = "0.3"
# Used by the live Kafka integration test to consume produced records back.
rskafka = { version = "0.6", default-features = false }
# Hermetic mock HTTP server for the Google Drive source integration test.
wiremock = "0.6"
# Generate an ephemeral RSA key for the OCI signing unit test.
rand = "0.8"

[[bench]]
name = "sdk_microbench"
harness = false
